[package]
name = "mcp_server"
version = "0.1.0"
edition = "2024"

# https://github.com/modelcontextprotocol/rust-sdk/tree/main/examples/servers/src

[dependencies]
# Update to the latest revision of rmcp on 2025, August the 31rst. Pinning specific release of rmcp and a2a-rs ensure stability of swarm
rmcp= { git = "https://github.com/modelcontextprotocol/rust-sdk.git", features = ["client","transport-sse-client", "transport-child-process","reqwest","transport-sse-client-reqwest","transport-sse-server"], rev="98e2b9df822f7cf51553f90a1034a3ad05cdb9c2"  }

tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
futures = "0.3"
axum = { version = "0.8", features = ["macros"] }
tokio-util = { version = "0.7", features = ["io", "codec"]}
rand = { version = "0.9" }
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }


[[example]]
name = "main-server"
path = "src/main-server.rs"
