[package]
name = "oauth_mcp_server"
version = "0.1.0"
edition = "2024"

# https://github.com/modelcontextprotocol/rust-sdk/tree/main/examples/servers/src

[dependencies]
rmcp = { workspace = true, features = ["transport-sse-server","auth"] }


tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
futures = { workspace = true }
axum = { workspace = true }
tokio-util = { version = "0.7", features = ["io", "codec"]}
rand = { version = "0.9" }
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
uuid={ workspace = true }
chrono={ workspace = true }
tower-service = { version = "0.3", optional = true }

[[example]]
name = "oauth-main-server"
path = "src/main-server.rs"
